# Hlynr_Intercept

./: .env  .gitignore  10-21-25_Analysis_report_7m-30p_plan.md  3D_VISUALIZATION_GUIDE.md  ANALYSIS_INDEX.md  BOTTLENECK_SUMMARY.txt  CHANGELOG.md  CODEBASE_ANALYSIS.md  EPISODE_SIMULATION_GUIDE.md  HLYNR_INFERENCE_API_DOCUMENTATION.md  HOW_TO_TRAIN_GOOD_MODEL.md  HRL_BREAKTHROUGH.md  HRL_FIX_PLAN.md  HRL_LOS_FRAME_PLAN.md  HRL_OPTION_A_PLAN.md  HRL_PRECISION_PROGRESS.md  HRL_vs_PPO_COMPARISON.md  INITIAL_EXAMPLE.md  Inference_Endpoint_Shema.md  LICENSE  LOGGING_CONSOLIDATION_REPORT.md  MLP_BASELINE_EXPERIMENT.md  OPTIMIZATION_CHANGES_APPLIED.md  PHASE3_DESIGN_SUMMARY.md  PHASE3_VALIDATION_REPORT.md  PHYSICS_ANALYSIS_REPORT.md  README.md  README_PHASE3_SUMMARY.md  REALISM_ANALYSIS.md  REALISTIC_EPISODE_SIMULATION_PLAN.md  REAL_TIME_ANIMATION_GUIDE.md  RL_POLICY_DIAGNOSIS.md  RUNNING.md  SYSTEM_ARCHITECTURE_REPORT.md  TEST_SERVER_GUIDE.md  UNITY_INFERENCE_INTEGRATION_GUIDE.md  UNITY_RL_API_CONFIGURATION.md  VISUALIZATION_GUIDE.md  VOLLEY_MODE_IMPLEMENTATION.md  analyze_checkpoint.py  (+49 more)
.serena/: project.yml
PRPs/: final_bridge_checks.md  unity_rl_bridge_api.md
aegis_intercept/: __init__.py
blank_canvas/: README.md  config.yaml  core.py  environment.py  inference.py  logger.py  requirements.txt  train.py
checkpoints/: env_checkpoint_10000.pkl  env_checkpoint_20000.pkl  env_checkpoint_30000.pkl  rl_model_vecnormalize_120000_steps.pkl  rl_model_vecnormalize_40000_steps.pkl  rl_model_vecnormalize_80000_steps.pkl  vec_normalize_final.pkl
configs/: README.md
demo_output/: episode_summaries.json
demo_test_output/: demo_analysis.json  demo_results_1752451380_episodes.csv  demo_results_1752451380_episodes.json  episode_summaries.json
deprecated/: pyproject.toml  train_17d_simple.py  train_good_model.py  train_radar17d.py
docs/: Phase3_6DOF_Implementation.md  Phase3_Reward_System.md  Phase_1_Summary.md  README.md  Realistic_Sensor_System.md
docs_generated/: COMPREHENSIVE_RL_DIAGNOSIS.md  Ground_Helper_Doc.md  HRL_DEPENDENCY_DIAGRAM.md  HRL_PHASE_3-5_ARCHITECTURE_CONFIRMATION.md  SETUP_COMPLETE_README.md  WHAT_HAPPENED_AND_HOW_TO_FIX.md
hlynr_bridge/: server.py  transforms.py
hlynr_intercept/: __init__.py
hrl/: HRL_ARCHITECTURE_SUMMARY.md  HRL_PRIMER.md
logs_fixed_reward/: curriculum_final.json  training_config.json  training_summary.json
logs_new/: curriculum_final.json  training_config.json  training_summary.json
logs_radar17_fixed/: evaluations.npz  events.out.tfevents.1756062126.roman-Desktop.36151.0  events.out.tfevents.1756062735.roman-Desktop.45134.0  events.out.tfevents.1756062804.roman-Desktop.46294.0  events.out.tfevents.1756063330.roman-Desktop.55079.0  (+4 more)
(+528 files in other folders)
