[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-intercept"
version = "0.1.0"
description = "Missile Defense RL Environment"
authors = [
    {name = "Roman Slack", email = "roman@example.com"},
    {name = "Quinn Hasse", email = "quinn@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "numpy",
    "torch",
    "matplotlib",
    "stable-baselines3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_intercept*"]