[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlynr-intercept"
version = "0.1.0"
description = "Missile Defense RL Environment"
authors = [
    {name = "Roman Slack", email = "roman@example.com"},
    {name = "Quinn Hasse", email = "quinn@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "numpy",
    "torch",
    "stable-baselines3",
    "cleanrl",
    "matplotlib",
    "pygame",
    "tensorboard",
    "scipy",
    "pyquaternion",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hlynr_intercept*"]